// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CartCount /> matches snapshot 1`] = `
<span
  class="CartCount__AnimationStyles-sc-xxvp4g-1 lcWlXV"
>
  <div>
    <div
      class="CartCount__Dot-sc-xxvp4g-0 hMpcbO count"
    >
      11
    </div>
  </div>
</span>
`;

exports[`<CartCount /> updates via props 1`] = `
<span
  class="CartCount__AnimationStyles-sc-xxvp4g-1 lcWlXV"
>
  <div>
    <div
      class="CartCount__Dot-sc-xxvp4g-0 hMpcbO count count-enter count-enter-active"
    >
      12
    </div>
    <div
      class="CartCount__Dot-sc-xxvp4g-0 hMpcbO count count-exit count-exit-active"
    >
      11
    </div>
  </div>
</span>
`;
